HW_06_for_check_2 1) Изменено описание исключений ExistStorageException и NotExistStorageException 2) Resume:  -изменен порядок объявления конструкторов( от меньшего к большему по количеству параметров)  -методы equals и hashCode теперь сравнивают объекты по 2 полям fuulName и uuid  -метод compareTo() -сравнение реализовано через тернарный оператор 3) AbstractStorage:  -реализован шаблонный метод getAllSorted(), который сортирует получаемые с помощью метода getList() списки 4) AbstractArrayStorage, ListStorage, MapStorage:  -реализован метод getList() возвращающий список. 5) Добавлен новый класс MapResumeStorage в котором в качестве searchKey выступает резюме 6) AbstractStorageTest:  -fullName добавлены вторым параметром в конструкторы переменных типа Resume и в методе update, отдельные переменные fullName удалены.  -Исправлен метод getAll() -с помощью метода getAllSorted() получаем отсортированный список и сравниваем с предварительно отсортированным тестовым списком. 7) Добавлен новый тестовый класс MapResumeStorageTest для класса MapResumeStorage 8) Добавлен новый тестовый класс RunAllTest, в котором заданы порядок и единая точка запуска всех тестов.