@@ -2,7 +2,7 @@ package com.urise.webapp;
 
 public class MainUtil {
     public static void main(String[] args) {
-        System.out.println(Integer.valueOf(-1)==Integer.valueOf(-1));
-        System.out.println(Integer.valueOf(-1)==new Integer(-1));
+        System.out.println(Integer.valueOf(-1) == Integer.valueOf(-1));
+        System.out.println(Integer.valueOf(-1) == new Integer(-1));
     }
 }
